--- a/index.html
+++ b/index.html
@@ -1,65 +1,85 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>My-resume1 by yi920123</title>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>场景一</title>
+    <link rel="stylesheet" href="index.css"/>
+    <meta name ="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">My-resume1</h1>
-        <p class="header">曹易贤的求职简历</p>
+</head>
+<body>
+    <div id="main">
+        <audio src="music/罗凯楠%20-%20咱们屯里的人.mp3" id="yy"></audio>
+        <ul class="slide">
+            <li class="zIndex" >
+                <div class="a8">
+                <img src="images/15.jpg" alt="" id="zt"/>
+                <p>生活总是那么充满激情</p></div>
+                <!--<div class="a2">-->
+                <!--<p>h5</p>-->
+                <!--<p>cs</p>-->
+                <!--<p>id</p>-->
+                <!--<p>ee</p>-->
+                <!--<p>dd</p>-->
+                <!--<p>dd</p>-->
+                <!--</div>-->
+                <!--<div class="a1">-->
+                    <!--<p>曾今作为前端开发的你<br>解决PC兼容性而焦头烂额</p>-->
+                    <!--<p>-->
+                        <!--而今<br>移动端h5应用疯狂来袭-->
+                    <!--</p>-->
+                    <!--<p>-->
+                        <!--你是否已准备充分学习新技能-->
+                    <!--</p>-->
+                    <!--<p>曾破茧成蝶,重获新生?</p>-->
+                <!--</div>-->
+            </li>
+            <li >
+                <!--<div class="a2">-->
+                    <!--<p>h5</p>-->
+                    <!--<p>cs</p>-->
+                    <!--<p>id</p>-->
+                    <!--<p>ee</p>-->
+                    <!--<p>dd</p>-->
+                    <!--<p>dd</p>-->
+                <!--</div>-->
+                <div class="a1">
+                    <p>姓名:曹易贤</p>
+                    <p>年龄:24</p>
+                    <p>学历:大专</p>
+                    <p>求职:web前端开发工程师</p>
+                    <p>联系方式:13383172722</p>
+                    <p>联系邮箱:383867824@qq.com</p>
+                </div>
+            </li>
+            <li >
+                <div class="a3">
+                    <h2>IT技能</h2>
+                    <p>1.熟悉了解h5,c3等相关技术</p>
+                    <p>2.熟练掌握html、div+css，能够手写符合w3c标准的页面代码。</p>
+                    <p>3.熟练掌握javaScript，对面向对象、闭包、this关键字、原型、原型链等有深刻的理解。</p>
+                </div>
+            </li>
+            <li>
+                <div class="a4">
+                    <p>我有一个梦</p>
+                    <p>可以装B可以飞</p>
+                    <p>希望周老师可以能带我实现</p>
+                </div>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/yi920123/my-Resume1/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/yi920123/my-Resume1/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/yi920123/my-Resume1">View On GitHub</a></li>
+            </li>
+            <li>
+                <div class="a5">
+                <p>自我评价</p>
+                <p>对技术有强烈的好奇心和浓厚的兴趣，上进心强、勤于学习能不断提高自身的能力与综合素质。</p>
+                <p>为人谦和、责任心强、能够很快的融入到团队中去。能够根据任务对工作进行规划，有条理的完成工作。</p>
+                <p>抗压能力强</p>
+                <!--<p>dd</p>-->
+                <!--<p>dd</p>-->
+                </div>
+            </li>
         </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/yi920123">yi920123</a></p>
-
-
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
-  </body>
+</body>
 </html>
+<script src="index.js"></script>
