--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>场景一</title>
+    <link type="text/css" rel="stylesheet" href="animate.css"/>
     <link rel="stylesheet" href="index.css"/>
     <meta name ="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <link type="text/css" rel="stylesheet" href="../animate.css"/>
+
 </head>
 <body>
     <div id="main">
-        <audio src="music/罗凯楠%20-%20咱们屯里的人.mp3" id="yy"></audio>
+        <audio src="music/久石让%20-%20月光の雲海%20-%20纯音乐版.mp3" id="yy"></audio>
         <ul class="slide">
             <li class="zIndex" >
                 <div class="a8">
-                <img src="images/03.png" alt="" id="zt" class=" animated slideInDown"/>
+                <img src="images/03.png" alt="" id="zt" class=" animated bounce infinite"/>
                 <p>或许我不是最好的,<br/>但我肯定是那个最努力的</p></div>
             </li>
             <li >
                 <div class="a1">
                     <p>姓名:曹易贤</p>
                     <p>年龄:24</p>
-                    <p>学历:大专</p>
+                    <p>籍贯:河北沧州</p>
                     <p>求职:web前端开发工程师</p>
                     <p>联系方式:13383172722</p>
                     <p>联系邮箱:383867824@qq.com</p>
